# my_qt_pengl

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.A9CCC214E3DE5F93.idx  main.cpp.D97734955EA6E19F.idx  mainwindow.cpp.E7A99D7A7B48216E.idx  mainwindow.cpp.FDA994A600ED1383.idx  mainwindow.h.35DBC75ECCD919EB.idx  mainwindow.h.B7B27E3C2977C7ED.idx
src/: main.cpp  mainwindow.cpp  mainwindow.h
